# decaylanguage

./: .all-contributorsrc  .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  README_dev.md  appveyor.yml  azure-pipelines.yml  codecov.yml  environment.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.ci/: azure-steps.yml  azure-wheel.yml
.github/workflows/: ci.yml  wheel.yml
ci/: appveyor-download.py  bootstrap.py
ci/templates/: .travis.yml  appveyor.yml
decaylanguage/: __init__.py  __main__.py  _version.py  goofit.py
decaylanguage/data/: BELLE2_Example.ipynb  DECAY_BELLE2.DEC  DECAY_CLASSIC.DEC  DECAY_LHCB.DEC  MintDalitzSpecialParticles.csv  MintDalitzSpecialParticles.fwf  MintDalitzSpecialParticlesLatex.csv  README.rst  Untitled.ipynb  __init__.py  ampgen.lark  decfile.lark  particle.lark  pdgID_to_latex.txt  test_Bd2DDst_Ds2DmPi0.dec  test_Bd2DstDst.dec  test_example_Dst.dec
decaylanguage/dec/: __init__.py  dec.py  decparser.py  enums.py
decaylanguage/decay/: AmpGenReader.ipynb  __init__.py  ampgen2goofit.py  ampline.py  amplitudechain.py  decay.py  errors.py  goofit.py  utilities.py  viewer.py
decaylanguage/modeling/: __init__.py  ampgen2goofit.py  ampgentransform.py  amplitudechain.py  decay.py  goofit.py
decaylanguage/particle/: MintDalitzSpecialParticles.csv  __init__.py  __main__.py  particle.py  pdgID_to_latex.txt  pdgid.py
decaylanguage/utils/: __init__.py  errors.py  particleutils.py  utilities.py
docs/: conf.py  index.rst  installation.rst  requirements.txt  usage.rst
docs/api/: dec.rst  decay.rst  index.rst  modeling.rst  utils.rst
docs/development/: changelog.rst  index.rst
docs/examples/: amplitude_models.rst  decay_chains.rst  decfile_parsing.rst  index.rst
docs/examples/notebooks/: index.rst
docs/getting_started/: index.rst  installation.rst  quickstart.rst
docs/reference/: decaylanguage.decay.rst  decaylanguage.particle.rst  decaylanguage.rst  index.rst
models/: DtoKpipipi_v2.txt
notebooks/: AmpGen2GooFit D2K3p.ipynb  AmpGen2GooFit_D2K3p.ipynb  DecReader.ipynb  DecayLanguageDemo.ipynb  DtoKpipipi_v2.cu  DtoKpipipi_v2.txt  ExampleDecFileParsingWithLark.ipynb  PDGID.ipynb  UpdateWithModernValues.ipynb  decaylanguage  simple_model.txt
scripts/: ampgen2goofit_D2K3p.py
src/decaylanguage/: __init__.py  __main__.py
src/decaylanguage/_compat/: typing.py
src/decaylanguage/data/: DECAY_BELLE2.DEC  DECAY_LHCB.DEC  MintDalitzSpecialParticles.csv  README.rst  WorkingOutModel.ipynb  __init__.py  ampgen.lark  decfile.lark  descriptor.lark
src/decaylanguage/dec/: __init__.py  dec.py  decparser.py  enums.py  validate.py
src/decaylanguage/decay/: __init__.py  decay.py  viewer.py
src/decaylanguage/modeling/: AmpGenReader.ipynb  __init__.py  ampgen2goofit.py  ampgentransform.py  amplitudechain.py  decay.py  goofit.py
src/decaylanguage/utils/: __init__.py  errors.py  particleutils.py  utilities.py
tests/: test_convert.py  test_dec.py  test_dec_full.py  test_decaylanguage.py  test_goofit.py  test_particle.py
tests/data/: README.rst  defs-aliases-chargeconj.dec  descriptor_alt.lark  duplicate-decays.dec  minimalistic.dec  test_Bc2BsPi_Bs2KK.dec  test_Bd2DDst_Ds2DmPi0.dec  test_Bd2DMuNu.dec  test_Bd2DmTauNu_Dm23PiPi0_Tau2MuNu.dec  test_Bd2Dst0X_D02KPi.dec  test_CopyDecay_RemoveDecay.dec  test_DtoKlnu.dec  test_Upsilon2S2UpsilonPiPi.dec  test_Upsilon4S2B0B0bar.dec  test_Xicc2XicPiPi.dec  test_custom_decay_model.dec  test_example_Dst.dec  test_issue90.dec  test_multiline_model.dec  test_stable-particle.dec
tests/data/models/: model-BCL.dec  model-BC_SMN.dec  model-BC_TMN.dec  model-BC_VHAD.dec  model-BC_VMN.dec  model-BC_VPPHAD.dec  model-BGL.dec  model-BLLNUL.dec  model-BNOCB0TO4PICP.dec  model-BNOCBPTO3HPI0.dec  model-BNOCBPTOKSHHH.dec  model-BQTOLLLL.dec  model-BQTOLLLLHYPERCP.dec  model-BSTD.dec  model-BSTD_2HDMTYPE2.dec  model-BSTOGLLISRFSR.dec  model-BSTOGLLMNT.dec  model-BS_MUMUKK.dec  model-BT02PI_CP_ISO.dec  model-BTO3PI_CP.dec  model-BTODDALITZCPK.dec  model-BTOKK0K0.dec  model-BTOSLLALI.dec  model-BTOSLLBALL.dec  model-BTOSLLMS.dec  model-BTOSLLMSEXT.dec  model-BTOVLNUBALL.dec  model-BTOXELNU.dec  model-BTOXSGAMMA.dec  model-BTOXSLL.dec  model-BTOXSNUNU_FERMI.dec  model-BToDiBaryonlnupQCD.dec  model-B_TO_2BARYON_SCALAR.dec  model-B_TO_LAMBDA_PBAR_GAMMA.dec  model-BaryonPCR.dec  model-CB3PI-MPP.dec  model-CB3PI-P00.dec  model-D0GAMMADALITZ.dec  model-D0MIXDALITZ.dec  model-DToKpienu.dec  (+96 more)
tests/dec/: test_dec.py  test_dec_benchmark.py  test_issues.py  test_known_decay_models.py  test_validate.py
tests/decay/: test_decay.py  test_descriptor.py  test_viewer.py
tests/output/: DtoKpipipi_v2.cu
tests/utils/: test_particleutils.py  test_utilities.py
