[metadata]
name = DecayLanguage
description = A language to describe, manipulate and convert particle decays
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scikit-hep/decaylanguage
author = Eduardo Rodrigues, Henry Fredrick Schreiner III
author_email = eduardo.rodrigues@cern.ch, henry.schreiner@cern.ch
maintainer = The Scikit-HEP admins
maintainer_email = scikit-hep-admins@googlegroups.com
license = BSD-3-Clause
license_file = LICENSE
platforms = Any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
keywords =
    HEP
    particle
    decay
    chain
    representation

[options]
packages = find:
install_requires =
    attrs>=19.2
    deprecated
    graphviz
    lark-parser>=0.11.0
    numpy>=1.12
    pandas>=0.22
    particle==0.16.*
    plumbum>=1.6.9
    cachetools;python_version<"3.3"
    enum34>=1.1;python_version<"3.4"
    importlib_resources>=2.0;python_version<"3.9"
    pathlib2>=2.3;python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=4.6
test =
    pytest>=4.6
    pytest-cov

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests
addopts =
    -ra
    --doctest-modules
    --doctest-glob=\*.rst

[flake8]
max-complexity = 24
ignore = E203, E231, E501, E722, W503, B950
select = C,E,F,W,B,B9
